# sftp-repl

./: README.md  main.py  pyproject.toml
sftp_cli/: __main__.py  completions.py
src/sftp_repl/: __main__.py  completions.py  utils.py
