[project]
name = "sftp_cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Bonsall", email = "6549165+dmbonsall@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "gnureadline>=8.2.13",
    "paramiko>=3.5.1",
    "pydantic>=2.11.5",
    "typer>=0.16.0",
]

[project.scripts]
sftp-cli = "sftp_cli.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
