[project]
name = "sftp-repl"
version = "0.1.0"
description = "Interactive REPL to interact with an SFTP server"
readme = "README.md"
authors = [
    { name = "David Bonsall", email = "6549165+dmbonsall@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "gnureadline>=8.2.13",
    "paramiko>=3.5.1",
    "pydantic>=2.11.5",
    "typer>=0.16.0",
]

[project.scripts]
sftp-cli = "sftp_repl.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
